# galax

./: .gitignore  INSTALL  Makefile.am  README.md  bootstrap  configure.ac  meson.build.polhpc
src/: Makefile.am  cladeinfo.hpp  conditionals.hpp  galax.cpp  galax.hpp  galaxdata.hpp  galaxinfo.hpp  galaxutil.hpp  main.cpp  node.hpp  split.hpp  tree.hpp  treemanip.hpp  xgalax.hpp
test/: _readme.txt  trees3prime.t
test/contrived/: trees.t
test/figure2/: galax  galax.conf  rooted-output-majrule.tre  rooted-output.txt  rooted.t  unrooted.t
test/multiple-treefiles/: atp6.t  atp9.t  cob.t  concat.t  cox1.t  cox2a.t  cox3.t  genelist.txt  nad1.t  nad2.t  nad3.t  nad4.t  nad4l.t  nad5.t  nad6.t  psaB.t  psbC.t  r18S.t  r28S.t  r5p8S.t  rbcL.t  tufA.t
test/rooted/: Ericales4.xml1-last100.trees  frt.trees
test/true-conflict/: concatenated.t  rps11.txt  trees5prime.t
vs/: vs.sln
vs/galax/: galax.vcxproj  galax.vcxproj.filters
vs/galax-vs2019/: galax-vs2019.sln  galax-vs2019.vcxproj
xcode/galax.xcodeproj/: project.pbxproj
xcode/galax.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/galax.xcodeproj/project.xcworkspace/xcshareddata/: galax.xccheckout
xcode/galax.xcodeproj/project.xcworkspace/xcuserdata/plewis.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/galax.xcodeproj/xcuserdata/plewis.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode/galax.xcodeproj/xcuserdata/plewis.xcuserdatad/xcschemes/: galax.xcscheme  xcschememanagement.plist
